CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(gtaformats CXX)

ADD_SUBDIRECTORY(gtaformats)

ADD_LIBRARY(gtaformats STATIC ${SRCS})
TARGET_LINK_LIBRARIES(gtaformats squish)

INSTALL(TARGETS gtaformats DESTINATION lib)
INSTALL(	DIRECTORY gtaformats
		DESTINATION include
		FILES_MATCHING
			PATTERN *.h
			PATTERN .svn EXCLUDE
	)


