ADD_SUBDIRECTORY(dff)
ADD_SUBDIRECTORY(img)
ADD_SUBDIRECTORY(lang)
ADD_SUBDIRECTORY(txd)

SET(SRCS ${SRCS} gtatools-gui/AboutFrame gtatools-gui/Application gtatools-gui/DataSource gtatools-gui/DisplayManager gtatools-gui/FileDataSource gtatools-gui/FileDisplayer gtatools-gui/FormatProvider gtatools-gui/MainFrame gtatools-gui/WxGUI PARENT_SCOPE)

